@@ -200,6 +200,7 @@ _global_option('quiet')
 _global_option('remember', help='Remember the specified location as a'
                ' default.')
 _global_option('reprocess', help='Reprocess to reduce spurious conflicts')
+_global_option('kind', type=str)
 
 
 def _global_short(short_name, long_name):
