@@ -529,6 +529,22 @@ class TestCommands(ExternalBase):
         self.runbzr('pull ../b')
         self.runbzr('pull ../b')
 
+    def test_inventory(self):
+        bzr = self.runbzr
+        def output_equals(value, *args):
+            out = self.runbzr(['inventory'] + list(args), backtick=True)
+            self.assertEquals(out, value)
+
+        bzr('init')
+        open('a', 'wb').write('hello\n')
+        os.mkdir('b')
+
+        bzr('add a b')
+        bzr('commit -m add')
+
+        output_equals('a\n', '--kind', 'file')
+        output_equals('b\n', '--kind', 'directory')        
+
     def test_ls(self):
         """Test the abilities of 'bzr ls'"""
         bzr = self.runbzr
